--- a/index.html
+++ b/index.html
@@ -8,21 +8,26 @@
 </head>
 <body>
     <header>
-
+        <nav>
+            <a href="./index.html">Home</a>
+            <a href="./aboutme.html">Sobre Mim</a>
+        </nav>
     </header>
     <main class="presentation">
         <section class="presentation__content">
         <h1 class="presentation__content__title">Eleve seu negócio digital a outro nível <strong class="blue-highlight">com um Front-end de qualidade!</strong></h1>
         <p>Olá! Sou Joana Santos, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
         <div class="presentation__content__links">
-            <a class="presentation__content__links__link" href="/instagram">instagram</a>
-            <a class="presentation__content__links__link" href="/github">github</a>
+            <h2 class="presentation__content_subtitle">Acesse minhas redes:</h2>
+            <a class="presentation__content__links__link" href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i>instagram</a></a>
+            <a class="presentation__content__links__link" href="https://github.com/"><i class="fa-brands fa-square-github"></i>github</a>
+            <a class="presentation__content__links__link" href="https://www.twitch.tv/"><i class="fa-brands fa-twitch"></i>twitch</a>
         </div>
     </section>
         <img src="./imagem.png" alt="foto da joana programando">
     </main>
     <footer>
-
+    <p>Desenvolvido por Alura</p>
     </footer>
 </body>
 </html>
