--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a class="presentation__content__links__link" href="https://www.twitch.tv/"><i class="fa-brands fa-twitch"></i>twitch</a>
         </div>
     </section>
-        <img src="./imagem.png" alt="foto da joana programando">
+        <img class="presentation__img" src="./imagem.png" alt="foto da joana programando">
     </main>
     <footer>
     <p>Desenvolvido por Alura</p>
